first version done
Signed-off-by: Yoshua Wuyts <yoshuawuyts@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "async-attributes"
-description = "Procedural macros for async-std."
+description = "Experimental language-level polyfills for Async Rust."
 version = "0.3.0-alpha.5"
 license = "MIT OR Apache-2.0"
 readme = "README.md"
@@ -23,6 +23,7 @@ native = []
 syn = { version = "0.15.33", features = ["full"] }
 proc-macro2 = { version = "0.4.29", features = ["nightly"] }
 quote = "0.6.12"
+async-trait = "0.1.11"
 
 [dev-dependencies]
-runtime-raw = { path = "../runtime-raw", version = "0.3.0-alpha.4" }
+async-std = "0.99.5"
