--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,9 @@ edition = "2018"
 proc-macro = true
 
 [dependencies]
-syn = { version = "1.0", features = ["full"] }
-quote = "1.0"
+syn = { version = "1.0.48", features = ["full"] }
+quote = "1.0.7"
 
 [dev-dependencies]
-async-std = "0.99.5"
+async-spawner = "1.0.0"
+async-std = "1.7.0"
